2014-10-30 Martin <tripiana@cern.ch>
	* Add options for systematics and output dir.
	* Add wrapper to run in batch. (overrides previous -b option).
	* Fix doOR requirement.
	* Fix PyAMI version in grid setup scripts.
	
2014-10-28 Arely <arelycg@cern.ch>
	* 'passOR' requirement should be "!doOR"
        * correct the '-j' option in util/run.cxx
        * added n_jets50

2014-10-28 Martin <tripiana@cern.ch>
	* Update GetMET call to latest SUSYTools implementation.
	* Fix jet 'passOR' requirement./
	* Add version flag (-v) to tag output files.

2014-10-27 Martin <tripiana@cern.ch>
	* Add options for max number of events and jOption.
	* Fix data paths for running in batch/grid mode.

2014-10-26 Martin <tripiana@cern.ch>
	* Fix passMCor (+ avoid zero-pt warnings)
	* Fix bad_alloc crash.
	* Tagging SusyAnalysis-00-00-05


2014-10-24 Martin <tripiana@cern.ch>
	* Add overlap removal option to jO.
	* Fix store cleaning when running in genPU mode.
	* Fix Stop and Monojet jOptions.

2014-10-21 Martin <tripiana@cern.ch>
	* Move to Base,2.0.14
	* New MET re-building in ST
	* Fix m_top
	* Add submit_batch script.

2014-10-20 Martin <tripiana@cern.ch>
	* Move to Base-2.0.13
	* Update to new ST decoration


2014-08-29 Martin <tripiana@cern.ch>
	* Move to Base-2.0.12
	* Add chorizoEDM.h header to hold all EDM no-cint-friendly
	* Update to new PileupReweightingTool
	* Update to new electron EDM (now available in ST)
	* Update to new TileTripReader
	* Fix CP systematic set
	* Remove old SUSYObjDef dependencies
	* Fix all paths relative to $ROOTCOREBIN (grid friendly)
	* Tagging SusyAnalysis-00-00-04

2014-08-29 Martin <tripiana@cern.ch>
	* Fix met & other variables
	* Fix btag filling. NOTE: use IP3DSV1 tagger to get something out (MV1 weights not saved yet)
	* Fix PDF_w   (still old pdf parameters enum, as in xAODTruth-00-00-23)
	* Add dummy values for variables init (DUMMYUP, DUMMYDN)
	* Tag SusyAnalysis-00-00-03

2014-08-28 Martin <tripiana@cern.ch>
	* Move to Base-2.0.7 .